fixed tarif on iphone

--- a/src/components/css-modules/Five-screen.module.css
+++ b/src/components/css-modules/Five-screen.module.css
@@ -55,9 +55,8 @@
 }
 
 .card{
-  height: 100%;
-  min-height: 300px;
-  max-height: 570px;
+  min-height: 100px;
+  max-height: 590px;
   background-color: white;
   text-align: left;
   border-radius: 5px;
@@ -157,6 +156,9 @@ li.list_item:before {
   }
   .card_title {
     padding-top: 40px;
+  }
+  .card{
+    height: 100%;
   }
 }
 
